--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,6 @@
-<h2>Sign up</h2>
+<h2>Edit user</h2>
 
 <% form_for(@user) do |f| %>
-  <%= render 'shared/error_messages', :object => f.object %>
   <%= f.error_messages %>
   <div class="field">
     <%= f.label :name %><br />
@@ -20,6 +19,11 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Update" %>
   </div>
 <% end %>
+
+<div>
+  <%= gravatar_for @user %>
+  <a href="http://gravatar.com/emails">change</a>
+</div>
